# synthetizen

./: .gitignore  CMakeLists.txt  README.md  runComposePath.bat  runComposePathEXR.bat  synthetizen.gitignore
apps/: CMakeLists.txt  CMakeLists.txt.txt  cmake_install.cmake
apps/compose/: CMakeLists.txt  main.cc
apps/gltest/: CMakeLists.txt  FindFreeImage.cmake  cmake_install.cmake  main.cc  synthetizen_gltest.vcxproj  synthetizen_gltest.vcxproj.filters
apps/layer_composer/: CMakeLists.txt  main.cc
apps/viewer/: CMakeLists.txt  main.cc  openglwindow.cpp  openglwindow.h
cmake_modules/: FindFreeImage.cmake
images/: 0000_alpha.exr  0000_ir.exr  0000_irpv.exr
resources/: images.qrc  shaders.qrc
resources/shaders/: composer_differential_rendering.fp  composer_differential_rendering_singleframe.fp  default.fp  default.vp  differential_rendering.fp  texture.fp
src/: CMakeLists.txt  CMakeLists.txt.txt
src/graphics/: CMakeLists.txt  openglwindow.cpp  openglwindow.h
